<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context="com.sistemasivhorsnet.tutransporte.MonitorNoAnswerFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@mipmap/ic_worried"/>
    <TextView
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="28sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_no_monitor"
        android:layout_marginBottom="16dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/prompt_init"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/wait"/>


</LinearLayout>
