<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/activity_monitor"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.sistemasivhorsnet.tutransporte.MonitorActivity"
    android:weightSum="1">
       <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.87"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <Button
        android:id="@+id/btnInitTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:text="@string/prompt_init" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <Button
        android:id="@+id/btnCantGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:text="@string/prompt_cant_go" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tvHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_description"
        android:text="Hora"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        tools:ignore="HardcodedText" />
    </LinearLayout>
</LinearLayout>
